--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+##################################################
+# Custom
+##################################################
+
+# Folder attributes on macOS
+.DS_Store
+
+
+##################################################
+# R.gitignore from https://github.com/github/gitignore
+##################################################
+
 # History files
 .Rhistory
 .Rapp.history
